// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TextInput Custom Suggestions 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 bmcBvd"
>
  <div
    className="StyledBox-sc-13pk1d4-0 dhcvkO"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 dAGFLA"
    >
      <svg
        aria-label="Search"
        className="StyledIcon-ofa7kd-0 dSllCE"
        viewBox="0 0 24 24"
      >
        <path
          d="M15,15 L22,22 L15,15 Z M9.5,17 C13.6421356,17 17,13.6421356 17,9.5 C17,5.35786438 13.6421356,2 9.5,2 C5.35786438,2 2,5.35786438 2,9.5 C2,13.6421356 5.35786438,17 9.5,17 Z"
          fill="none"
          stroke="#000"
          strokeWidth="2"
        />
      </svg>
      <div
        className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
      >
        <input
          autoComplete="off"
          className="StyledTextInput-sc-1x30a0s-0 qwjyr"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="Enter your name..."
          type="search"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextInput Simple TextInput 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 dvDJyW"
>
  <div
    className="StyledBox-sc-13pk1d4-0 KvEcD"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 ipWbUu"
    >
      <div
        className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
      >
        <input
          autoComplete="off"
          className="StyledTextInput-sc-1x30a0s-0 iQGivQ"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextInput Suggestions TextInput 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 dvDJyW"
>
  <div
    className="StyledBox-sc-13pk1d4-0 KvEcD"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 ipWbUu"
    >
      <div
        className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
      >
        <input
          autoComplete="off"
          className="StyledTextInput-sc-1x30a0s-0 iQGivQ"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
